<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wiew_workout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/view_workout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_workout_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workout_title"
                style="@style/BigContentText"/>

            <TextView
                android:id="@+id/lbl_workout_scheduled_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/if_scheduled_date_here"
                style="@style/LightContentText"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/img_workout_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="6dp"
            android:src="@drawable/star_rate4"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/lbl_workout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:text="@string/workout_content"
        style="@style/BasicContentText"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/BasicBorderView"/>

    <LinearLayout
        android:id="@+id/view_workout_parameters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:src="@drawable/calories"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CALORIE BURN"
                    style="@style/SmallContentText"/>

                <TextView
                    android:id="@+id/lbl_calorie_burn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2,567"
                    style="@style/BigContentText"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:src="@drawable/stopwatch"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/estimated_time"
                    style="@style/SmallContentText"/>

                <TextView
                    android:id="@+id/lbl_estimated_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="15:24"
                    style="@style/BigContentText"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:src="@drawable/distance"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    style="@style/SmallContentText"/>

                <TextView
                    android:id="@+id/lbl_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2.2"
                    style="@style/BigContentText"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:src="@drawable/elevation_rise"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/elevation_gain"
                    style="@style/SmallContentText"/>

                <TextView
                    android:id="@+id/lbl_elevation_gain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="548"
                    style="@style/BigContentText"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>