<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="150dp"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:background="@color/light_gray">

    <ImageView
        android:id="@+id/img_thumbnail"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_redwoods"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/txt_included_workout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Redwoods National Park"
            style="@style/ItemTitleText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_distance"
                style="@style/SmallContentText"/>

            <TextView
                android:id="@+id/txt_included_workout_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="3.8 mi"
                style="@style/SmallContentText"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_burn"
                style="@style/SmallContentText"/>

            <TextView
                android:id="@+id/txt_included_workout_burn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="796 Cals"
                style="@style/SmallContentText"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_elevation_gain"
                style="@style/SmallContentText"/>

            <TextView
                android:id="@+id/txt_included_workout_elevation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="1,358 ft"
                style="@style/SmallContentText"/>

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="8dp"
        android:layout_height="200dp">

    </LinearLayout>

</LinearLayout>